--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,7 +69,7 @@ bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 bind c new-window -c "#{pane_current_path}"
 
 # Prompt to rename window right after it's created
-set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+#set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
@@ -265,7 +265,7 @@ set -g status-right-length 100
 # define widgets we're going to use in status bar
 # note, that this is not the complete list, some of them are loaded from plugins
 wg_session="#[fg=$color_session_text] #S #[default]"
-wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
+wg_battery="#{battery_status_fg} #{battery_icon} #{battery_color_charge_fg}#[bg=$color_dark]#{battery_percentage}#[default]"
 wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
 wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
@@ -301,6 +301,15 @@ set -g @batt_color_full_charge "#[fg=$color_level_ok]"
 set -g @batt_color_high_charge "#[fg=$color_level_ok]"
 set -g @batt_color_medium_charge "#[fg=$color_level_warn]"
 set -g @batt_color_low_charge "#[fg=$color_level_stress]"
+set -g @batt_icon_charge_tier8 '🌕'
+set -g @batt_icon_charge_tier7 '🌖'
+set -g @batt_icon_charge_tier6 '🌖'
+set -g @batt_icon_charge_tier5 '🌗'
+set -g @batt_icon_charge_tier4 '🌗'
+set -g @batt_icon_charge_tier3 '🌘'
+set -g @batt_icon_charge_tier2 '🌘'
+set -g @batt_icon_charge_tier1 '🌑'
+set -g @batt_icon_status_charging '⚡'
 
 # Configure tmux-prefix-highlight colors
 set -g @prefix_highlight_output_prefix '['
