--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,7 +173,7 @@ bind -T copy-mode-vi WheelDownPane     select-pane \; send-keys -X -N 2 scroll-d
 if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
     "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
 
-yank="~/.tmux/yank.sh"
+yank="${HOME}/dotfiles/tmux/yank.sh"
 
 # Copy selected text
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "$yank"
