Added some tmux tweaks

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,7 @@ set -g display-time 1500
 set -g remain-on-exit off
 set -g repeat-time 300
 setw -g allow-rename off
-setw -g automatic-rename off
+setw -g automatic-rename on
 setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
@@ -67,9 +67,6 @@ bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
 bind c new-window -c "#{pane_current_path}"
-
-# Prompt to rename window right after it's created
-#set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
@@ -210,7 +207,7 @@ color_blue="colour39"
 color_yellow="colour220"
 color_red="colour160"
 color_black="colour232"
-color_white="white" # 015
+color_white="colour15" # 015
 
 # This is a theme CONTRACT, you are required to define variables below
 # Change values, but not remove/rename variables itself
@@ -265,7 +262,7 @@ set -g status-right-length 100
 # define widgets we're going to use in status bar
 # note, that this is not the complete list, some of them are loaded from plugins
 wg_session="#[fg=$color_session_text] #S #[default]"
-wg_battery="#{battery_status_fg} #{battery_icon} #{battery_color_charge_fg}#[bg=$color_dark]#{battery_percentage}#[default]"
+wg_battery="#{battery_color_charge_fg}#[bg=default] #{battery_icon} #{battery_percentage}#[default]"
 wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
 wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
@@ -273,7 +270,7 @@ wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | $wg_user_host | $wg_date $wg_battery #{online_status}"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | $wg_user_host | $wg_date | $wg_battery #{online_status}"
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]●#[default]"
@@ -376,7 +373,7 @@ bind -T root F12  \
     set prefix None \;\
     set key-table off \;\
     set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
+    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right #I:#W #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right" \;\
     set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
