--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -359,7 +359,7 @@ set -g @open-S 'https://www.google.com/search?q='
 # ==============================================
 
 # Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT" || test -n "$IS_DOCKER"'
+if-shell 'test -n "$SSH_CLIENT" || test -n "$IS_DOCKER"' \
     'source-file ~/.tmux/tmux.remote.conf'
 
 # We want to have single prefix key "C-a", usable both for local and remote session
