--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -9,5 +9,16 @@ set -g @copy_backend_remote_tunnel_port 11988
 set -g status-left "$wg_session"
 set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{network_bandwidth} | #{sysstat_cpu} | #{sysstat_mem} | $wg_user_host | #{online_status}"
 
+# Change prefix key
 unbind C-a
 set -g prefix C-b
+
+# Disable Mouse
+set -g mouse off
+
+# trigger copy mode by
+bind -n C-Up copy-mode
+
+
+
+
