--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,7 +57,8 @@ unbind M-Up  # resize 5 rows up
 unbind M-Down # resize 5 rows down
 unbind M-Right # resize 5 rows right
 unbind M-Left # resize 5 rows left
-
+unbind NPage
+unbind PPage
 
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
@@ -66,26 +67,39 @@ bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
-bind c new-window -c "#{pane_current_path}"
+bind -n M-c new-window -c "#{pane_current_path}"
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # Split panes
-bind | split-window -h -c "#{pane_current_path}"
-bind _ split-window -v -c "#{pane_current_path}"
+#bind | split-window -h -c "#{pane_current_path}"
+#bind _ split-window -v -c "#{pane_current_path}"
+bind -n M-\\ split-window -h -c "#{pane_current_path}"
+bind -n M-- split-window -v -c "#{pane_current_path}"
 
 # Select pane and windows
-bind -r C-[ previous-window
-bind -r C-] next-window
-bind -r [ select-pane -t :.-
-bind -r ] select-pane -t :.+
-bind -r Tab last-window   # cycle thru MRU tabs
+#bind -r C-[ previous-window
+#bind -r C-] next-window
+#bind -r [ select-pane -t :.-
+#bind -r ] select-pane -t :.+
+#bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
 
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Switch Windows with Pageup and Pdown
+bind -n M-left previous-window
+bind -n M-Right next-window
+
 # Zoom pane
-bind + resize-pane -Z
+#bind + resize-pane -Z
+bind -n M-= resize-pane -Z
 
 # Link window
 bind L command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
