--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -67,7 +67,7 @@ bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
-bind -n M-c new-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
