added split panes key bindings in tmux remote

--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -3,7 +3,7 @@
 set -g status-position bottom
 
 # Set port of SSH remote tunnel, where tmux will pipe buffers to transfer on local machine for copy
-set -g @copy_backend_remote_tunnel_port 11988
+#set -g @copy_backend_remote_tunnel_port 11988
 
 # In remote mode we don't show "clock" and "battery status" widgets
 set -g status-left "$wg_session"
@@ -17,8 +17,14 @@ set -g prefix C-b
 set -g mouse off
 
 # trigger copy mode by
-bind -n C-Up copy-mode
+bind -n C-Up copy-mode #Ctrl + Up
 
+# Split panes
+bind | split-window -h -c "#{pane_current_path}"
+bind _ split-window -v -c "#{pane_current_path}"
+
+# Zoom pane
+bind + resize-pane -Z
 
 
 
