--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,8 +3,8 @@
 # ==========================
 
 set -g default-terminal "screen-256color"
-set -g history-limit 20000
-set -g buffer-limit 20
+set -g history-limit 50000
+set -g buffer-limit 100
 set -sg escape-time 0
 set -g display-time 1500
 set -g remain-on-exit off
@@ -93,7 +93,7 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-# Switch Windows with Pageup and Pdown
+# Switch Windows with alt-left and alt-right
 bind -n M-left previous-window
 bind -n M-Right next-window
 
@@ -111,8 +111,8 @@ bind '\' if '[ #{pane_index} -eq 1 ]' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
 # Kill pane/window/session shortcuts
-bind x kill-pane
-bind X kill-window
+bind x confirm-before -p "kill pane? (y/n)" "kill-pane" 
+bind X confirm-before -p "kill window? (y/n)" "kill-window"
 bind C-x confirm-before -p "kill other windows? (y/n)" "kill-window -a"
 bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
 
@@ -199,11 +199,9 @@ bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
 
 # Copy selection on drag end event, but do not cancel copy mode and do not clear selection
 # clear select on subsequence mouse click
-bind -T copy-mode-vi MouseDragEnd1Pane \
-    send-keys -X copy-pipe "$yank"
-bind -T copy-mode-vi MouseDown1Pane select-pane \;\
-   send-keys -X clear-selection
-    
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear "$yank"
+bind -T copy-mode-vi MouseDown1Pane    select-pane \; send-keys -X clear-selection
+
 # iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
 # tmux show-options -g -s set-clipboard
 # set-clipboard on|external
@@ -354,15 +352,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 set -g @plugin 'xamut/tmux-network-bandwidth'
 
 # Plugin properties
-set -g @sidebar-tree 't'
-set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
 
 set -g @open-S 'https://www.google.com/search?q='
