disable stabilize shells

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -133,13 +133,13 @@ bind D if -F '#{session_many_attached}' \
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
 # Stabilize shells
-setenv -g py2 "python2 -c 'import pty;pty.spawn(\"/bin/bash\")'"
-setenv -g py3 "python3 -c 'import pty;pty.spawn(\"/bin/bash\")'"
-setenv -g shellexports "export TERM=xterm;stty rows 75 cols 319"
+#setenv -g py2 "python2 -c 'import pty;pty.spawn(\"/bin/bash\")'"
+#setenv -g py3 "python3 -c 'import pty;pty.spawn(\"/bin/bash\")'"
+#setenv -g shellexports "export TERM=xterm;stty rows 75 cols 319"
 
-unbind C-q
-bind C-q send $py3 Enter
-bind -n C-q send C-z "stty raw -echo;fg" Enter $shellexports Enter reset Enter
+#unbind C-q
+#bind C-q send $py3 Enter
+#bind -n C-q send C-z "stty raw -echo;fg" Enter $shellexports Enter reset Enter
 
 # ==================================================
 # === Window monitoring for activity and silence ===
